# Django-test-

./: README.md
myproject/: db.sqlite3  pyproject.toml
myproject/myproject/: settings.py  urls.py
myproject/pilotlog/: import_and_export_script.py  models.py  serializers.py  views.py
myproject/pilotlog/migrations/: 0001_initial.py
